--- a/package.json
+++ b/package.json
@@ -1,24 +1,41 @@
 {
-  "name": "Backend-Project",
+  "name": "backend-project",
   "version": "1.0.0",
   "description": "Repositorio responsavel pelo back-end do projeto utilizando Node. js com Express.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "start": "nodemon -r dotenv/config server",
+    "migration:create": "knex migrate:make",
+    "migration:up": "knex migrate:latest",
+    "migration:up:prod": "knex migrate:latest --env production",
+    "migration:down": "knex migrate:down"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Projeto-PoloNorte/Backend-Project.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "node"
+  ],
+  "author": "Indira Singh",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/Projeto-PoloNorte/Backend-Project/issues"
   },
   "homepage": "https://github.com/Projeto-PoloNorte/Backend-Project#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
-  }
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "jest": "^26.2.2",
+    "jsonwebtoken": "^8.5.1",
+    "knex": "^0.21.2",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.4",
+    "pg": "^8.3.0",
+    "sqlite3": "^5.0.0"
+  },
+  "devDependencies": {}
 }
