--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "migration:create": "knex migrate:make",
     "migration:up": "knex migrate:latest",
     "migration:up:prod": "knex migrate:latest --env production",
-    "migration:down": "knex migrate:down"
+    "migration:down": "knex migrate:down",
+    "seed:create": "knex seed:make",
+    "seed": "knex seed:run --env development"
   },
   "repository": {
     "type": "git",
@@ -32,6 +34,7 @@
     "jest": "^26.2.2",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.2",
+    "moment": "^2.27.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
     "pg": "^8.3.0",
